themes/foodiepro-2.1.8/style.css
/* ... */
.title-area,
.site-title,
.site-title a {
	padding:0; /* P.O. Original 16px 0 */
	width:290px; /* P.O. Original 360px */
	height:70px; /* P.O. Original 300px */
	float:left;
  text-indent:-9999px;
}

.home-page .title-area,
.home-page .site-title,
.home-page .site-title a {
	width:450px; /* P.O. Original 450px */
	height:190px; /* P.O. Original 380px */
}

/* Added P.O. Vertical centering and header height */
.title-area {
  margin:5px 0;
}

.home-page .title-area {
  margin:10px 0;
}

/*.home-page .site-title a,
.site-title a {
	background-size:contain;
}*/


.title-area h1 {
	margin:0 auto;
}

.title-area p {
	margin:0;
}

/*.header-image .title-area {
	padding:0;
	float:left;
}*/

.site-title,
.site-title a {
	font-size:55px;
	font-weight:300;
	letter-spacing:4px;
	line-height:1.2;
	text-align:center;
	text-decoration:none;
	text-transform:uppercase;
}

.site-title a,
.site-title a:hover {
	color:#444;
}

.site-description {
	color:#999;
	font-size:11px;
	font-style:italic;
	font-weight:400;
	letter-spacing:.5px;
	margin:0;
	text-align:center;
	text-transform:none;
}

/* Full width header, no widgets */

.header-full-width .title-area,
.header-full-width .site-title {
	width:100%;
}

.header-image .site-description,
.header-image .site-title a {
	display:block;
	text-indent:-9999px;
}

/* Logo, hide text */


/* .header-image only appears when no written site title is used */
.header-image .site-header {
	background-position:center !important; /* P.O. Original center */
	background-size:400px 170px !important;  /* P.O. Original 400px 170px */
}

.header-image .site-title a {
	float:none;
	min-height:130px; /* P.O. Original 164px */
	width:100%;
}


/* Site Navigation
--------------------------------------------- */

nav.nav-primary .wrap {
	/* Allows profile avatar to go outside the menu bar */
	overflow:visible;
}




/* Header Widget Area & widgets
--------------------------------------------- */

.site-header .widget-area {
	float:right;
	text-align:right;
	margin:auto;
	width:300px; /* P.O. Original 720px */
	/*height:130px;  P.O. Original empty */
}

.header-image .site-header .widget-area {
	padding:0px 0; /* P.O. Original 20px 0 */
}

.site-header .widget_search {
	width:100%;
	padding-right:20px;
	/*margin-top:24px;*/
}

.home .site-header .widget_search {
	margin-top:40px;
}

.search-form input {
	font-size:12px;
	border-radius:10px;
	border-width:2px;
	border-color:##ddc3a3;
	/*border-color:#9c9b9b;*/
}


/*
Content Area
---------------------------------------------------------------------------------------------------- */


/* Blogs/Recipes grid in main content
--------------------------------------------- */

.entry-content .rpwe-block ul li, /* Prevents styling from other .entry-content section */
.content .rpwe-block li {
	float:left;
  border-width:0px;
  margin: 0 0 20px 0;
  padding:5px;
  display:-webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display:-moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display:-ms-flexbox;      /* TWEENER - IE 10 */
  display:-webkit-flex;     /* NEW - Chrome */
	-webkit-flex-direction:column;
  display:flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
	flex-direction:column;
	-ms-flex-align:center;
}

.content a.rpwe-img {
	margin-right:auto;
	margin-left:auto;
	background:white;
  font-size:0;
}

.content a.rpwe-img:hover img {
	opacity:0.8;
}


.rpwe-block img.avatar {
	width:55px;
}



/* Entries
--------------------------------------------- */

/*.entry {
	margin-bottom:20px;
	padding:0 0 22px;
}*/

.entry {
  float:left;
}

/*.entry-content a {
	color:#010101;
}*/

/*.entry-content a:hover {
	color:#111;
}*/

.entry-avatar img {
	margin-right:10px;
	margin-top:10px;
	margin-bottom: 0;    
}

.entry-content .attachment a,
.entry-content .gallery a {
	border:none;
}

.entry-content ol,
.entry-content p,
.entry-content ul,
.quote-caption,
.clear-line {
	margin-bottom:15px;
}

.entry-content ol li,
.entry-content ul li {
	margin-left:10px;
}

.entry-content ul li {
	list-style-type:disc;
}

.entry-content ol ol,
.entry-content ul ul,
.entry-content .wp-caption p {
	margin-bottom:0;
}

.entry-meta,
.post-info,
.post-meta {
	color:#999;
	font-size:11px;
	font-style:italic;
	margin:0;
}

.entry-meta a,
.post-info a,
.post-meta a {
	color:#999;
	text-decoration:none;
}

.entry-meta a:hover {
	color:#010101;
}

.entry-header .entry-meta,
.post-info {
	margin-bottom:20px;
	line-height:1;
}

.entry-footer .entry-meta,
.post-meta {
	border-top:1px solid #ccc;
	padding-top:20px;
}

.entry-comments-link::before {
	content:"\2014";
	margin:0 6px 0 2px;
}

.entry-categories,
.entry-tags {
	display:block;
}

/* Post navigation */

.post-nav a img {
	margin:0 10px 20px 10px;
	clear:both;
}

.post-nav-title {
	clear:both;
} 


/* Common Post & Archive font styles */

a.more-link,
.more-from-category a,
.pagination-previous a,
.pagination-next a,
.prev-post,
.next-post {
	color:#010101;
	display:table;
	font-size:11px; /* P.O. Original 13px */
	font-weight:600;
	letter-spacing:2px;
	padding:3px 8px;
	text-decoration:none;
	text-transform:uppercase;
}

.more-from-category a {
	margin:0 auto 0px; /* P.O. Original margin-bottom:40px; */
}

.more-link {
	margin-top:15px;
}

.more-from-category {
	clear:both;
	display:block;
	float:none;
	text-align:center;
	margin-top:20px;
}


/* Recipes & Posts grid
--------------------------------------------- */

.content .rpwe-block {
  margin-right:0;
  text-align:left;
}

.content img.rpwe-thumb {
	margin:0;
  width:100%;
  object-fit:contain;
  flex:1;
}

.content h3.rpwe-title {
	margin-top:5px;
  width:100%;       
}

.content .rpwe-block h3 {
	font-size:16px!important;
	line-height:18px;
	text-align:center;
	padding-top:5px;
}
/* ... */

